--- a/index.html
+++ b/index.html
@@ -1,24 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Love Letter Animation</title>
-    <link rel="stylesheet" href="style.css">
+<meta charset="UTF-8">
+<title>Valentine 💖</title>
+<link src="stylesheet" href="style.css"
+
 </head>
+
 <body>
 
-<div class="container">
-    <div class="envelope">
-        <div class="flap"></div>
-        <div class="letter">
-            <div class="heart">
-                <span class="eye left"></span>
-                <span class="eye right"></span>
-                <span class="smile"></span>
-            </div>
-        </div>
-    </div>
+<!-- Heart -->
+<div class="heart">
+    <div class="eye left"></div>
+    <div class="eye right"></div>
+    <div class="smile"></div>
+    <div class="kiss">💋</div>
 </div>
+
+<!-- Message -->
+<div class="message">
+    <strong>Sinovuyo Janda</strong><br>
+    Will you be my Valentine? 💘
+</div>
+
+<!-- Buttons -->
+<div class="buttons">
+    <button class="yes" onclick="alert('Yay! 💖 You made my day!')">Yes</button>
+    <button class="no" onmouseover="moveButton(this)">No</button>
+</div>
+
+<script>
+function moveButton(btn) {
+    const x = Math.random() * 200 - 100;
+    const y = Math.random() * 200 - 100;
+    btn.style.transform = `translate(${x}px, ${y}px)`;
+}
+</script>
 
 </body>
 </html>
