--- a/index.html
+++ b/index.html
@@ -2,9 +2,125 @@
 <html lang="en">
 <head>
 <meta charset="UTF-8">
-<title>Valentine 💖</title>
-<link src="stylesheet" href="style.css">
+<title>Valentine 💕</title>
 
+<style>
+body {
+    margin: 0;
+    height: 100vh;
+    background: #ffb6c1; /* Pink background */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-family: Arial, sans-serif;
+}
+
+/* Main card */
+.card {
+    background: #ffe0eb; /* lighter pink */
+    padding: 60px;
+    border-radius: 30px;
+    text-align: center;
+    box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+}
+
+/* Heart */
+.heart {
+    position: relative;
+    width: 140px;
+    height: 140px;
+    background: hotpink;
+    transform: rotate(-45deg);
+    margin: 0 auto 40px;
+    animation: pulse 1.5s infinite;
+}
+
+.heart::before,
+.heart::after {
+    content: "";
+    position: absolute;
+    width: 140px;
+    height: 140px;
+    background: hotpink;
+    border-radius: 50%;
+}
+
+.heart::before {
+    top: -70px;
+    left: 0;
+}
+
+.heart::after {
+    left: 70px;
+    top: 0;
+}
+
+/* Face */
+.eye {
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: black;
+    border-radius: 50%;
+    top: 55px;
+}
+
+.eye.left { left: 40px; }
+.eye.right { right: 40px; }
+
+.smile {
+    position: absolute;
+    width: 30px;
+    height: 15px;
+    border-bottom: 4px solid black;
+    border-radius: 0 0 30px 30px;
+    bottom: 45px;
+    left: 55px;
+}
+
+/* Message */
+.message {
+    font-size: 32px;
+    font-weight: bold;
+    color: #b30059;
+    margin-bottom: 40px;
+}
+
+/* Buttons */
+.buttons {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+button {
+    font-size: 22px;
+    padding: 16px 50px;
+    border-radius: 35px;
+    cursor: pointer;
+    border: none;
+    transition: 0.3s;
+}
+
+.yes {
+    background: #2f80ff;
+    color: white;
+}
+
+.no {
+    background: white;
+    color: #333;
+    position: relative;
+}
+
+/* Heart animation */
+@keyframes pulse {
+    0% { transform: rotate(-45deg) scale(1); }
+    50% { transform: rotate(-45deg) scale(1.1); }
+    100% { transform: rotate(-45deg) scale(1); }
+}
+</style>
 </head>
 
 <body>
